--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 </head>
 
 <body>
-  <img src="https://media-exp1.licdn.com/dms/image/C5603AQFGR9blEHCjDA/profile-displayphoto-shrink_800_800/0/1518858700643?e=1622678400&v=beta&t=X8hfwi4z2GvvOUztqMa6vwDXS_4sEseHoyaBn4h5MPM" alt="Guillaume profile picture">
-  <h1>Guillaume Kanh</h1>
-  <p><em>Data Scientist</em></p>
-  <p>I am a data Scientist at booz Allen. I love manipulating data</p>
-  <p>The link to my LinkedIn account is <a href="https://www.linkedin.com">LinkedIn</a> </p>
+  <table>
+    <tr>
+      <td><img src="https://media-exp1.licdn.com/dms/image/C5603AQFGR9blEHCjDA/profile-displayphoto-shrink_800_800/0/1518858700643?e=1622678400&v=beta&t=X8hfwi4z2GvvOUztqMa6vwDXS_4sEseHoyaBn4h5MPM" alt="Guillaume profile picture"></td>
+      <td>   <h1>Guillaume Kanh</h1>
+        <p><em>Data Scientist</em></p>
+        <p>I am a data Scientist at booz Allen. I love manipulating data</p>
+        <p>The link to my LinkedIn account is <a href="https://www.linkedin.com">LinkedIn</a> </p></td>
+    </tr>
+  </table>
   <hr>
   <h3><strong>Education</strong></h3>
   <ul>
